# UPLS

./: README.md
UPLS_HookFirmware/: platformio.ini
UPLS_HookFirmware/include/: RF24_arch_config.h  RF24_config.h  Singleton.h  definitions.h  global_macros.h  messages.h  nRF24L01.h
UPLS_HookFirmware/lib/ADC/: ADC.cpp  ADC.h
UPLS_HookFirmware/lib/Battery/: Battery.cpp  Battery.h
UPLS_HookFirmware/lib/Latch/: Latch.cpp  Latch.h
UPLS_HookFirmware/lib/Packet/: Packet.cpp  Packet.h
UPLS_HookFirmware/lib/Pin/: Pin.cpp  Pin.h
UPLS_HookFirmware/lib/RF24/: RF24.cpp  RF24.h
UPLS_HookFirmware/lib/SoftPWM/: SoftPWM.cpp  SoftPWM.h
UPLS_HookFirmware/lib/Timer0/: Timer0.cpp  Timer0.h
UPLS_HookFirmware/lib/cxa_guard/: cxa_guard.cpp  cxa_guard.h
UPLS_HookFirmware/lib/spi/: spi.cpp  spi.h
UPLS_HookFirmware/src/: main.cpp
UPLS_MainControllerFirmware/: platformio.ini
UPLS_MainControllerFirmware/include/: global_macros.h
UPLS_MainControllerFirmware/lib/Buffer/: MyBuffer.cpp  MyBuffer.h
UPLS_MainControllerFirmware/lib/DRV8874/: DRV8874.cpp  DRV8874.h
UPLS_MainControllerFirmware/lib/Encoder/: Encoder.cpp  Encoder.h
UPLS_MainControllerFirmware/lib/Extruder/: Extruder.cpp  Extruder.h
UPLS_MainControllerFirmware/lib/Filters/: Filters.h
UPLS_MainControllerFirmware/lib/LandingGear/: LandingGear.cpp  LandingGear.h
UPLS_MainControllerFirmware/lib/LedDriver/: LedDriver.cpp  LedDriver.h
UPLS_MainControllerFirmware/lib/LoopController/: LoopController.cpp  LoopController.h
UPLS_MainControllerFirmware/lib/MotorSpeedControl/: MotorSpeedControl.cpp  MotorSpeedControl.h
UPLS_MainControllerFirmware/lib/Packet/: packet.cpp  packet.h
UPLS_MainControllerFirmware/lib/RF24/: RF24.cpp  RF24.h  RF24_config.h  nRF24L01.h
UPLS_MainControllerFirmware/lib/RmsAdc/: RmsAdc.h
UPLS_MainControllerFirmware/lib/Winch/: Winch.cpp  Winch.h
UPLS_MainControllerFirmware/lib/fixed/: fixed.h
UPLS_MainControllerFirmware/src/: main.cpp
UPLS_Py/: .gitignore  CMakeLists.txt  Doxyfile  Makefile
UPLS_Py/bindings/: bindings.h  bindings.xml
UPLS_Py/doc/html/: annotated.html  classUPLS__Controller-members.html  classUPLS__Controller.html  classes.html  dir_7d1edf9b5da88cecbdea804c7a3a1c6c.html  dir_9982052f7ce695d12571567315b2fafa.html  dir_eecd5939ffbd3ebe856fe7eefb8b8da9.html  files.html  functions.html  functions_enum.html  functions_func.html  index.html  menudata.js  packet_8h_source.html  structCommand-members.html  structCommand.html  structError-members.html  structError.html  structHookInfo-members.html  structHookInfo.html  structHookInfo_1_1Battery-members.html  structHookInfo_1_1Battery.html  structHookInfo_1_1Latch-members.html  structHookInfo_1_1Latch.html  structLandingGearInfo-members.html  structLandingGearInfo.html  structLandingGearInfo_1_1Leg-members.html  structLandingGearInfo_1_1Leg.html  structLatencyCheck-members.html  structLatencyCheck.html  structLedInfo-members.html  structLedInfo.html  structLedInfo_1_1Led-members.html  structLedInfo_1_1Led.html  structLedInfo_1_1Led_1_1Blinking-members.html  structLedInfo_1_1Led_1_1Blinking.html  structLedInfo_1_1Led_1_1FadeInFadeOut-members.html  structLedInfo_1_1Led_1_1FadeInFadeOut.html  structLedInfo_1_1Led_1_1Normal-members.html  structLedInfo_1_1Led_1_1Normal.html  (+11 more)
UPLS_Py/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js
UPLS_Py/doc/latex/: annotated.tex  classUPLS__Controller.tex  refman.tex  structCommand.tex  structError.tex  structHookInfo.tex  structHookInfo_1_1Battery.tex  structHookInfo_1_1Latch.tex  structLandingGearInfo.tex  structLandingGearInfo_1_1Leg.tex  structLatencyCheck.tex  structLedInfo.tex  structLedInfo_1_1Led.tex  structLedInfo_1_1Led_1_1Blinking.tex  structLedInfo_1_1Led_1_1FadeInFadeOut.tex  structLedInfo_1_1Led_1_1Normal.tex  structLedInfo_1_1Led_1_1Pulsing.tex  structWarning.tex  structWinchInfo.tex
UPLS_Py/src/: CMakeLists.txt  console_formating.h  global_macros.h  logger.cpp  logger.h  packet.cpp  packet.h  ringbuffer.h  serialport.cpp  serialport.h  tsqueue.h  upls_controller.cpp  upls_controller.h
UPLS_Py/utils/: determine_shiboken_version.py  pyside2_config.py  pyside6_config.py  pyside6_config_custom.py
UPLS_PyDemoApp/: .gitignore  command_test_script.py  custom_widgets.py  main.py  test.py
shared/Buffer/: MyBuffer.cpp  MyBuffer.h
shared/myqueue/: CMakeLists.txt  Makefile  naqueue.h  test.cpp
shared/packet/: packet.cpp  packet.h
